--- a/test1/pom.xml
+++ b/test1/pom.xml
@@ -22,6 +22,15 @@
     <groupId>test1</groupId>
     <artifactId>test1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <distributionManagement>
+
+        <repository>
+            <id>nexus</id>
+            <name>nexus</name>
+            <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
+        </repository>
+
+    </distributionManagement>
     <packaging>war</packaging>
     <name>test1</name>
     <description>A starter Java EE 6 webapp project for use on JBoss AS 7 / EAP 6, generated from the jboss-javaee6-webapp archetype</description>
@@ -87,6 +96,7 @@
                 <version>${version.jboss.bom}</version>
                 <type>pom</type>
                 <scope>import</scope>
+                
             </dependency>
         </dependencies>
     </dependencyManagement>
